# craft-gl

./: CMakeLists.txt  README.md  controls.md  todo.md
include/core/: block.h  blockType.h  camera.h  chunk.h  coordinate.h  debug.h  direction.h  interface.h  player.h  staticData.h  world.h
include/core/block/: air.h  bedrock.h  block.h  diamond.h  dirt.h  error.h  grass.h  packedIce.h  stone.h
include/geometry/: AABB.h  block.h  blockFace.h  chunkMesh.h  crosshair.h  frustum.h  ray.h
include/material/: blockTextureList.h  light.h
include/render/: bufferData.h  renderManager.h  shader.h  shaderManager.h  texture.h  textureArray.h  textureManager.h  vertexData.h  window.h
include/render/buffer/: aabbData.h  blockData.h  crosshairData.h  vertexData.h
include/render/renderable/: chunkMesh.h  crosshair.h  debug.h  inventory.h  renderable.h
include/render/shader/: shader.h  shaderManager.h
include/render/texture/: texture.h  textureArray.h  textureManager.h
include/renderable/: debug.h
include/utility/: constant.h  coordinate.h  timer.h
shader/block/: fragment.glsl  vertex.glsl
shader/crosshair/: fragment.glsl  vertex.glsl
shader/debug/: vertex.glsl
shader/inventory/: fragment.glsl  vertex.glsl
src/: main.cpp
src/core/: block.cpp  camera.cpp  chunk.cpp  debug.cpp  interface.cpp  player.cpp  world.cpp
src/geometry/: AABB.cpp  block.cpp  chunkMesh.cpp  crosshair.cpp
src/render/: renderManager.cpp  shader.cpp  texture.cpp  textureArray.cpp  window.cpp
src/render/renderable/: block.cpp  debug.cpp  (+3 more)
src/renderable/: chunkMesh.cpp  crosshair.cpp
(+2 files in other folders)
